--- a/HTML&CSS/week_4/Aperture/index.html
+++ b/HTML&CSS/week_4/Aperture/index.html
@@ -510,6 +510,12 @@
               © Aperture Photography, Inc. All rights reserved.
               <a class="footer_container_3_block_1_link" href="/">Licensing.</a>
             </p>
+            <p class="footer_container_3_block_1_text">
+              Pet-project, developer
+              <a class="footer_container_3_block_1_link" href="/"
+                >Yulia Lugovaya.</a
+              >
+            </p>
           </div>
           <div class="footer_container_3_block_2">
             <a class="footer_container_3_block_2_link" href="/"
@@ -518,7 +524,7 @@
             <a class="footer_container_3_block_2_link" href="/"
               ><img src="./assets/images/footer_icon_2.svg" alt="Instagram"
             /></a>
-            <a class="footer_container_3_block_2_link" id="facebook" href="/"
+            <a class="footer_container_3_block_2_link" href="/"
               ><img src="./assets/images/footer_icon_3.svg" alt="Facebook"
             /></a>
           </div>
