fixed cootels and aperture

--- a/HTML&CSS/week_4/Aperture/index.html
+++ b/HTML&CSS/week_4/Aperture/index.html
@@ -511,7 +511,7 @@
               <a class="footer_container_3_block_1_link" href="/">Licensing.</a>
             </p>
             <p class="footer_container_3_block_1_text">
-              Pet-project, developer
+              Pet-project. Developer
               <a class="footer_container_3_block_1_link" href="/"
                 >Yulia Lugovaya.</a
               >
