--- a/HTML&CSS/week_6/Cootels/index.html
+++ b/HTML&CSS/week_6/Cootels/index.html
@@ -357,6 +357,10 @@
                   alt="Facebook"
               /></a>
             </div>
+            <p class="footer_link">
+              Pet-project. Developer
+              <a class="footer_menu" href="/">Yulia Lugovaya.</a>
+            </p>
           </div>
           <div class="footer_block_2">
             <div class="footer_nav">
