fixed color-blocks, added gallery in html

--- a/JavaScript/week_14/greeting-calculator_and_color-block/index.html
+++ b/JavaScript/week_14/greeting-calculator_and_color-block/index.html
@@ -13,7 +13,7 @@
       <h1 class="title">Практические задания Недели 14</h1>
 
       <div class="color-blocks">
-        <section class="message" id="message" onclick="message()">
+        <section class="block" id="message" onclick="select(this)">
           <h2 class="subtitle">Задание №1 - приветственное сообщение</h2>
           <p>
             Как тебя зовут?
@@ -27,7 +27,7 @@
           </div>
         </section>
 
-        <section class="calculator" id="calculator" onclick="calculator()">
+        <section class="block" id="calculator" onclick="select(this)">
           <h2 class="subtitle">Задание №2 - калькулятор</h2>
           <p>Число 1: <input type="text" id="number1" /></p>
           <p>Число 2: <input type="text" id="number2" /></p>
@@ -51,6 +51,25 @@
           </div>
         </section>
       </div>
+
+      <section class="gallery">
+        <div class="gallery__item">
+          <img
+            src="./assets/images/image_1.jpg"
+            alt="Горы"
+            id="mountains"
+            onclick="mountains()"
+          />
+        </div>
+        <!--<div class="gallery__item">
+          <img src="./assets/images/image_2.jpg" alt="Растение">
+        </div>
+        <div class="gallery__item">
+          <img src="./assets/images/image_3.jpg" alt="Море">
+        </div>-->
+        <button class="gallery__button" id="prev">Назад</button>
+        <button class="gallery__button" id="next">Вперед</button>
+      </section>
     </div>
     <script src="./assets/js/script.js"></script>
   </body>
