fixed html and js

--- a/JavaScript/week_14/greeting_calculator_color-block_gallery/index.html
+++ b/JavaScript/week_14/greeting_calculator_color-block_gallery/index.html
@@ -49,6 +49,9 @@
           <div>
             <p id="result">Результат:</p>
           </div>
+          <button class="message__button" onclick="getReset()">
+            Сбросить значения
+          </button>
         </section>
       </div>
 
