--- a/JavaScript/week_14/greeting_calculator_color-block_gallery/index.html
+++ b/JavaScript/week_14/greeting_calculator_color-block_gallery/index.html
@@ -13,7 +13,7 @@
       <h1 class="title">Практические задания Недели 14</h1>
 
       <div class="color-blocks">
-        <section class="block" onclick="select(this)">
+        <div class="block" onclick="select(this)">
           <h2 class="subtitle">Приветственное сообщение</h2>
           <p>
             Как тебя зовут?
@@ -25,9 +25,9 @@
           <div>
             <p id="out"></p>
           </div>
-        </section>
+        </div>
 
-        <section class="block" id="calculator" onclick="select(this)">
+        <div class="block" id="calculator" onclick="select(this)">
           <h2 class="subtitle">Калькулятор</h2>
           <p>Число 1: <input type="text" id="number1" /></p>
           <p>Число 2: <input type="text" id="number2" /></p>
@@ -52,10 +52,10 @@
           <button class="message__button" onclick="getReset()">
             Сбросить значения
           </button>
-        </section>
+        </div>
       </div>
 
-      <section class="gallery">
+      <div class="gallery">
         <h2 class="subtitle subtitle_gallery">Галерея</h2>
         <div class="gallery__photos">
           <div class="gallery__item">
@@ -73,7 +73,7 @@
             <button class="next">Вперед</button>
           </div>
         </div>
-      </section>
+      </div>
     </div>
     <script src="./assets/js/script.js"></script>
   </body>
