added some inputs

--- a/JavaScript/week_15/calculator_themes/index.html
+++ b/JavaScript/week_15/calculator_themes/index.html
@@ -40,6 +40,28 @@
           <p class="form__text">Находите новые идеи для вдохновения</p>
           <form action="#">
             <div class="form__item">
+              <label for="name">Имя</label>
+              <div>
+                <input
+                  class="form__field"
+                  type="text"
+                  id="name"
+                  placeholder="Введите имя"
+                />
+              </div>
+            </div>
+            <div class="form__item">
+              <label for="login">Логин</label>
+              <div>
+                <input
+                  class="form__field"
+                  type="text"
+                  id="login"
+                  placeholder="Придумайте логин"
+                />
+              </div>
+            </div>
+            <div class="form__item">
               <label for="email">Адрес электронной почты</label>
               <div>
                 <input
@@ -58,6 +80,17 @@
                   type="password"
                   id="password"
                   placeholder="Создайте пароль"
+                />
+              </div>
+            </div>
+            <div class="form__item">
+              <label for="tel">Номер телефона</label>
+              <div>
+                <input
+                  class="form__field"
+                  type="tel"
+                  id="tel"
+                  placeholder="Введите номер телефона"
                 />
               </div>
             </div>
