added themes to js

--- a/JavaScript/week_15/calculator_themes/index.html
+++ b/JavaScript/week_15/calculator_themes/index.html
@@ -23,8 +23,8 @@
             <form action="#">
               <div>
                 <label for="theme">Выберите тему:</label>
-                <select name="theme" id="theme">
-                  <option value="white">Белая</option>
+                <select name="theme" id="theme" onchange="changeTheme()">
+                  <option selected="selected" value="white">Белая</option>
                   <option value="dark">Темная</option>
                   <option value="beidge">Бежевая</option>
                 </select>
