added shadows to inputs

--- a/JavaScript/week_15/calculator_themes/index.html
+++ b/JavaScript/week_15/calculator_themes/index.html
@@ -41,7 +41,7 @@
             <p class="form__text">Находите новые идеи для вдохновения</p>
             <form action="#">
               <div class="form__item">
-                <label for="name">Имя</label>
+                <label class="form__label" for="name">Имя</label>
                 <div>
                   <input
                     class="form__field"
@@ -53,7 +53,7 @@
               </div>
               <div id="errorName"></div>
               <div class="form__item">
-                <label for="login">Логин</label>
+                <label class="form__label" for="login">Логин</label>
                 <div>
                   <input
                     class="form__field"
@@ -65,7 +65,9 @@
               </div>
               <div id="errorLogin"></div>
               <div class="form__item">
-                <label for="email">Адрес электронной почты</label>
+                <label class="form__label" for="email"
+                  >Адрес электронной почты</label
+                >
                 <div>
                   <input
                     class="form__field"
@@ -77,7 +79,7 @@
               </div>
               <div id="errorEmail"></div>
               <div class="form__item">
-                <label for="password">Пароль</label>
+                <label class="form__label" for="password">Пароль</label>
                 <div>
                   <input
                     class="form__field"
@@ -89,7 +91,7 @@
               </div>
               <div id="errorPassword"></div>
               <div class="form__item">
-                <label for="tel">Номер телефона</label>
+                <label class="form__label" for="tel">Номер телефона</label>
                 <div>
                   <input
                     class="form__field"
@@ -101,7 +103,7 @@
               </div>
               <div id="errorTel"></div>
               <div class="form__item">
-                <label for="age">Возраст</label>
+                <label class="form__label" for="age">Возраст</label>
                 <div>
                   <input
                     class="form__field"
