added txt, fixed some mistakes

--- a/JavaScript/week_15/calculator_themes_form/index.html
+++ b/JavaScript/week_15/calculator_themes_form/index.html
@@ -37,7 +37,7 @@
                     Светлая
                   </option>
                   <option class="theme__color" value="dark">Темная</option>
-                  <option class="theme__color" value="beidge">Бежевая</option>
+                  <option class="theme__color" value="beige">Бежевая</option>
                 </select>
               </div>
             </form>
