added some styles and js to suminput

--- a/JavaScript/week_16/sumInput/index.html
+++ b/JavaScript/week_16/sumInput/index.html
@@ -44,7 +44,9 @@
             </div>
           </div>
 
-          <button class="button" onclick="getReset()">Сбросить значения</button>
+          <button class="button button_reset" onclick="getReset()">
+            Сбросить значения
+          </button>
         </div>
       </div>
     </div>
